samples/_failures_safe/1761256324_80ec0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4c8bf86.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_e4c8bf86.c:166:9: error: expected expression at end of input
  166 |         } else
      |         ^
./samples/SAFE/__tmp_e4c8bf86.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4c8bf86.c:166:9: error: expected declaration or statement at end of input
